testsuite/tests/properties/invalid_dynvar/test.out
== <EnvGet(<DynamicVariable env>, <FieldAccess .tok>)> ==
test.py:7: error: env is not bound in this context: please use the .bind construct to bind it first.

== <FieldAccess .implicit_prop> ==
test.py:38: error: In call to ExampleNode.implicit_prop, some dynamic variables need to be bound: env

== <bind(<DynamicVariable env>, <FieldAccess .node_env>, <EnvGet(<DynamicVariable env>, <Var Self>)>)> ==
Code generation was successful

== <bind(<DynamicVariable env>, <FieldAccess .node_env>, <FieldAccess .implicit_prop>)> ==
Code generation was successful

Done
